kustomize/instances/overlays/frontend/hipstershop/istio/virtualservices/productcatalog-canary/fault-injection/delay/productcatalog-vs-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalog-canary-vs
spec:
  hosts:
  - 'productcatalogservice'
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
      weight: 100
    - destination:
        host: productcatalogservice
        subset: v2
      weight: 0
    fault:
      delay:
        percent: 0
        fixedDelay: 10s
